--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,68 +4,78 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.rudnick.iowavotes.MainActivity">
+    tools:context="org.rudnick.iowavotes.MainActivity"
+    android:weightSum="2">
 
-    <TextView
-        android:id="@+id/carousel"
-        android:layout_width="fill_parent"
-        android:layout_height="180dp"
-        android:layout_marginBottom="16dp"
-        android:text="Hello World!" />
+    <ImageView
+        android:id="@+id/results"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:src="@drawable/results_three" />
+
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="2"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center|bottom"
+        android:orientation="vertical"
+        android:weightSum="2">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:weightSum="2">
+
         <Button
             android:id="@+id/register"
             android:layout_width="0dp"
-            android:layout_height="90dp"
-            android:layout_weight="1"
-            android:text="@string/register_button" />
-
-        <View
-            android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@android:color/darker_gray" />
+            android:layout_weight="1"
+            android:text="@string/register_button"
+            android:background="@drawable/custom_button"
+            android:textColor="@color/colorWhiteText" />
+
         <Button
             android:id="@+id/vote"
             android:layout_width="0dp"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/vote_button" />
+            android:text="@string/vote_button"
+            android:background="@drawable/custom_button"
+            android:textColor="@color/colorWhiteText" />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="2"
-        android:orientation="horizontal">
-    <Button
-        android:id="@+id/check"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
         android:layout_weight="1"
-        android:text="@string/check_button" />
+        android:weightSum="2">
 
-        <View
-            android:layout_width="1dp"
+        <Button
+            android:id="@+id/officials"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="@android:color/darker_gray" />
-    <Button
-        android:id="@+id/polling"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_weight="1"
-        android:text="@string/polling_button" />
+            android:layout_weight="1"
+            android:text="@string/check_button"
+            android:background="@drawable/custom_button"
+            android:textColor="@color/colorWhiteText" />
+
+        <Button
+            android:id="@+id/polling"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/polling_button"
+            android:background="@drawable/custom_button"
+            android:textColor="@color/colorWhiteText" />
+    </LinearLayout>
     </LinearLayout>
 </LinearLayout>
