--- a/app/src/main/res/layout/fragment_view_info.xml
+++ b/app/src/main/res/layout/fragment_view_info.xml
@@ -9,4 +9,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.rudnick.iowavotes.ViewVotingActivity" />
+    android:background="#ffffff"
+    android:divider="@null"
+    android:dividerHeight="0dp"/>
