--- a/app/src/main/res/drawable/tab_indicator_selected.xml
+++ b/app/src/main/res/drawable/tab_indicator_selected.xml
@@ -4,9 +4,9 @@
         <shape
             android:innerRadius="0dp"
             android:shape="ring"
-            android:thickness="4dp"
+            android:thickness="7dp"
             android:useLevel="false">
-            <solid android:color="@android:color/black"/>
+            <solid android:color="@color/colorPrimary"/>
         </shape>
     </item>
 </layer-list>
